# COS-710

./: README.md
Homework/: Homework1.py
assign1/: default_config.json  main.py  param_template.json  pyproject.toml  results.json  test.py  text.py
assign1/assign1/: component_factory.py  config_manager.py  fitness_functions.py  genetic_operators.py  gp_class.py  plugin_manager.py  population.py  selection_method.py  state.py  syntax_tree.py  utils.py
assign1/assign1/config_classes/: component_factory.py  config_manager.py  genetic_operators.py
