[tool.poetry]
name = "assign1"
version = "0.1.0"
description = ""
authors = ["GremBleen <graemeharryblain@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
